# BlackLib

./: .gitignore  BlackDef.h  BlackLib.cpp  BlackLib.h  CMakeLists.txt  README  README.md  blacklib-config-version.cmake.in  blacklib-config.cmake.in
SPI_SETUP/: BLACKLIB-SPI0-00A0.dts  readme.md
examples/: example_I2C.h  example_threadAndMutex.h  example_time.h
include/: BlackDef.h
include/BlackGPIO/: BlackGPIO.h
include/BlackI2C/: BlackI2C.h
include/BlackMutex/: BlackMutex.h
include/BlackPWM/: BlackPWM.h
include/BlackThread/: BlackThread.h
src/BlackADC/: BlackADC.cpp
src/BlackDirectory/: BlackDirectory.cpp
src/BlackGPIO/: BlackGPIO.cpp
src/BlackI2C/: BlackI2C.cpp
src/BlackMutex/: BlackMutex.cpp
src/BlackPWM/: BlackPWM.cpp
src/BlackSPI/: BlackSPI.cpp
src/BlackThread/: BlackThread.cpp
src/BlackTime/: BlackTime.cpp
src/BlackUART/: BlackUART.cpp
v1_0/: BlackErr.h  example.cpp
v2_0/: BlackADC.cpp  BlackADC.h  BlackCore.cpp  BlackCore.h  BlackDef.h  BlackErr.h  BlackGPIO.cpp  BlackGPIO.h  BlackI2C.cpp  BlackI2C.h  BlackLib.h  BlackPWM.cpp  BlackPWM.h  BlackSPI.cpp  BlackSPI.h  BlackUART.cpp  BlackUART.h  ReleaseNotes  WebPages.dox  exampleAndTiming.cpp
v2_0/exampleAndTiming/: Timing.cpp  Timing.h  exampleAndTiming_ADC.h  exampleAndTiming_GPIO.h  exampleAndTiming_I2C.h  exampleAndTiming_PWM.h  exampleAndTiming_SPI.h  exampleAndTiming_UART.h
v2_0/exampleAndTiming/results/: BlackADC_timing_results.out  BlackGPIO_timing_results.out  BlackI2C_timing_results.out  BlackPWM_timing_results.out  BlackSPI_timing_results.out  BlackUART_timing_results.out
v3_0/: BlackCore.cpp  BlackCore.h  BlackErr.h  BlackLib.h  CMakeLists.txt  README.md  Release Notes  examples.cpp  makefile
v3_0/BlackADC/: BlackADC.cpp  BlackADC.h
v3_0/BlackDirectory/: BlackDirectory.cpp  BlackDirectory.h
v3_0/BlackGPIO/: BlackGPIO.cpp
v3_0/BlackI2C/: BlackI2C.cpp
v3_0/BlackMutex/: BlackMutex.cpp
v3_0/BlackPWM/: BlackPWM.cpp
v3_0/BlackSPI/: BlackSPI.cpp  BlackSPI.h
v3_0/BlackThread/: BlackThread.cpp
v3_0/BlackTime/: BlackTime.cpp  BlackTime.h
v3_0/BlackUART/: BlackUART.cpp  BlackUART.h
v3_0/SPI_SETUP/: BLACKLIB-SPI1-00A0.dts  setup_from_BBB  setup_from_host
v3_0/examples/: example_ADC.h  example_GPIO.h  example_PWM.h  example_SPI.h  example_UART.h  example_directory.h
